# spatialist-backend

./: .gitignore  Dockerfile  Makefile  README.md  connector.py  docker-compose.yaml  main.py  models.py  pyproject.toml
static/: index.html  list.html  listbygroup.html  poster.html  swipe.html
