[tool.poetry]
name = "spatialist-backend"
version = "0.1.0"
description = ""
authors = ["Malo Ranzetti <71760128+mrztti@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
azure-cosmos = "^4.5.1"
azure-identity = "^1.15.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
